--- a/src/main/resources/templates/access_confirmation.html
+++ b/src/main/resources/templates/access_confirmation.html
@@ -4,8 +4,10 @@
     <title>Authorize</title>
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet'
           type='text/css'/>
-    <link rel="stylesheet" th:href="'https://'+${@environment.getProperty('org.revo.env.buckets.static.domainname')}+'/auth/src/main/resources/static/css/bootstrap.min.css'"/>
-    <link rel="stylesheet" th:href="'https://'+${@environment.getProperty('org.revo.env.buckets.static.domainname')}+'/auth/src/main/resources/static/css/style.css'"/>
+    <!--<link rel="stylesheet" th:href="'https://'+${@environment.getProperty('org.revo.env.buckets.static.domainname')}+'/auth/src/main/resources/static/css/bootstrap.min.css'"/>-->
+    <!--<link rel="stylesheet" th:href="'https://'+${@environment.getProperty('org.revo.env.buckets.static.domainname')}+'/auth/src/main/resources/static/css/style.css'"/>-->
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
 </head>
 <body>
 <div class="container">
