--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -4,8 +4,10 @@
     <title>Sign In</title>
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet'
           type='text/css'/>
-    <link rel="stylesheet" th:href="'https://'+${@environment.getProperty('org.revo.env.buckets.static.domainname')}+'/auth/src/main/resources/static/css/bootstrap.min.css'"/>
-    <link rel="stylesheet" th:href="'https://'+${@environment.getProperty('org.revo.env.buckets.static.domainname')}+'/auth/src/main/resources/static/css/style.css'"/>
+    <!--<link rel="stylesheet" th:href="'https://'+${@environment.getProperty('org.revo.env.buckets.static.domainname')}+'/auth/src/main/resources/static/css/bootstrap.min.css'"/>-->
+    <!--<link rel="stylesheet" th:href="'https://'+${@environment.getProperty('org.revo.env.buckets.static.domainname')}+'/auth/src/main/resources/static/css/style.css'"/>-->
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
 </head>
 <body>
 <div class="container">
@@ -29,7 +31,7 @@
             <button type="submit" class="btn btn-sm btn-default simplebutton loginButton">
                 Login
             </button>
-            <a class="btn btn-sm btn-link newAccButton"  th:href="@{/signup}">
+            <a class="btn btn-sm btn-link newAccButton" th:href="@{/signup}">
                 Don't have an account?
             </a>
         </form>
